--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"cors": "^2.8.0",
-		"express": "^4.12.4"
+		"dotenv": "^8.2.0",
+		"express": "^4.12.4",
+		"mongoose": "^5.11.19"
 	},
 	"repository": {
 		"type": "git",
